@@ -13,7 +13,7 @@ def run(files, temp_folder, arg=None):
     parser = get_parser()
     argos = parser.parse_args(arg.split())
 
-    current_branch = bash('git symbolic-ref HEAD').output.decode('utf-8')
+    current_branch = bash('git symbolic-ref HEAD').value().decode('utf-8')
     current_branch = current_branch.replace('refs/heads/', '').strip()
     if current_branch in argos.branches:
         return ("Branch '{0}' is blocked from being "
