@@ -5,8 +5,9 @@ from .utils import bash, filter_python_files
 
 DEFAULT = 'off'
 CHECK_NAME = 'frosted'
-NO_FROSTED_MSG = ("frosted is required for the frosted plugin.\n"
-                "`pip install frosted` or turn it off in your tox.ini file.")
+NO_FROSTED_MSG = (
+    "frosted is required for the frosted plugin.\n"
+    "`pip install frosted` or turn it off in your tox.ini file.")
 REQUIRED_FILES = ['tox.ini']
 
 
@@ -18,5 +19,6 @@ def run(files, temp_folder):
         return NO_FROSTED_MSG
 
     py_files = filter_python_files(files)
+    cmd = 'frosted {0}'.format(' '.join(py_files))
 
-    return bash('frosted {0}'.format(' '.join(py_files))).value()
+    return bash(cmd).value()
