@@ -13,7 +13,7 @@ def run(files, temp_folder):
         # We only want to show errors if we CAN'T compile to py3.
         # but we want to show all the errors at once.
         b = bash('python3 -m py_compile {0}'.format(py_file))
-        if b.err:
+        if b.stderr:
             b = bash('2to3-2.7 {file}'.format(file=py_file))
-            errors.append(b.output.decode(encoding='UTF-8'))
+            errors.append(b.value())
     return "\n".join(errors)
