@@ -6,6 +6,17 @@ grep:off
 isort:on
 block_branch:on;master
 merge_marks:on
+frosted:on
 
 [flake8]
 exclude=features/*.py
+
+[tox]
+envlist = py27,py32,py34
+
+[testenv]
+deps =
+    -r{toxinidir}/test-requirements.txt
+commands =
+    nosetests
+    behave
