@@ -1,4 +1,5 @@
 
+ - added ``frosted`` check
  - made non-compatibility with python<2.7 explicit.
  - fixed a bug with blocked branches on py3.
  - fixed bug when captainhook section is missing.
